--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+onak (0.3.0+arch-1) unstable; urgency=low
+
+  * arch snapshot
+
+ -- Jonathan McDowell <noodles@earth.li>  Fri, 24 Sep 2004 19:35:48 +0100
+
 onak (0.3.0-1) unstable; urgency=low
 
   * Initial Release. (closes: #254425)
