--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-onak (0.3.1+arch-1) unstable; urgency=low
+onak (0.3.2-1) unstable; urgency=low
 
-  * Mark as arch build.
+  * New upstream release.
 
- -- Jonathan McDowell <noodles@earth.li>  Sat, 23 Oct 2004 18:18:47 +0100
+ -- Jonathan McDowell <noodles@earth.li>  Fri, 25 Mar 2005 11:17:44 +0000
 
 onak (0.3.1-1) unstable; urgency=low
 
