Add revoked/bare public key signed keys Add a revoked v4 key and a key with a signature on the main public key that isn't revoked.

--- a/keys/README
+++ b/keys/README
@@ -16,3 +16,7 @@ autodns.key
 	A v4 DSA/Elg key.
 noodles.key
 	My v4 DSA/Elg key.
+putro.key
+	A v4 key with a non revocation signature on the public key.
+huggie-rev.key
+	A revoked v4 key.
