--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 onak (0.3.3+arch-1) unstable; urgency=low
 
   * Tag as arch version.
+  * Lintian cleanups
+    * Add #DEBHELPER# tokens to postinst/postrm.
 
  -- Jonathan McDowell <noodles@earth.li>  Sun, 04 Mar 2007 23:16:51 +0000
 
