Update FSF address in copyright file. Lintian cleanup; FSF address is now 51 Franklin St. Update in LICENSE too.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ onak (0.3.3+arch-1) unstable; urgency=low
   * Tag as arch version.
   * Lintian cleanups
     * Add #DEBHELPER# tokens to postinst/postrm.
+    * Update FSF address in copyright file.
 
  -- Jonathan McDowell <noodles@earth.li>  Sun, 04 Mar 2007 23:16:51 +0000
 
