--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ onak (0.3.3+arch-1) unstable; urgency=low
   * Lintian cleanups
     * Add #DEBHELPER# tokens to postinst/postrm.
     * Update FSF address in copyright file.
+    * Remove bashism from postrm.
 
  -- Jonathan McDowell <noodles@earth.li>  Sun, 04 Mar 2007 23:16:51 +0000
 
