--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ onak (0.3.3+arch-1) unstable; urgency=low
     * Update FSF address in copyright file.
     * Remove bashism from postrm.
     * Update Standards-Version to 3.7.3.0 (no changes)
+  * Update Apache recommendation to Apache2
 
  -- Jonathan McDowell <noodles@earth.li>  Sun, 04 Mar 2007 23:16:51 +0000
 
