--- a/HISTORY
+++ b/HISTORY
@@ -209,3 +209,8 @@
 * Fix dynamic backends bug involving passing the config to the backend.
 * Add an install target to the Makefile.
 * Add a man page for keyd. 
+
+0.3.5 - 16th January 2008
+
+* Fix dumb mistake with db4 backend. Serves me right for testing with
+  the file one.
