--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+onak (0.3.5) unstable; urgency=low
+
+  * New upstream release
+    * Fixes stupid db4 backend mistake (Closes: #460575)
+
+ -- Jonathan McDowell <noodles@earth.li>  Wed, 16 Jan 2008 21:30:40 +0000
+
 onak (0.3.4) unstable; urgency=low
 
   * New upstream release
