--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-onak (0.3.5) unstable; urgency=low
+onak (0.3.5-1) unstable; urgency=low
 
   * New upstream release
     * Fixes stupid db4 backend mistake (Closes: #460575)
 
  -- Jonathan McDowell <noodles@earth.li>  Wed, 16 Jan 2008 21:30:40 +0000
 
-onak (0.3.4) unstable; urgency=low
+onak (0.3.4-1) unstable; urgency=low
 
   * New upstream release
     * Fix config passing to backends (Closes: #413762)
