--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-onak 0.3.6
-Copyright 2003-2008 Project Purple. Written by Jonathan McDowell
+onak 0.3.7
+Copyright 2003-2009 Jonathan McDowell
 http://www.earth.li/projectpurple/progs/onak.html
 
 
