--- a/README
+++ b/README
@@ -148,5 +148,5 @@ tla get -A noodles@earth.li--2004-laptop onak--mainline--0.3
 
 License:
 
-onak is distributed under the GNU Public License, a copy of which should
-have been provided with this archive as LICENSE.
+onak is distributed under the GNU Public License version 2, a copy of
+which should have been provided with this archive as LICENSE.
