Add a stats command to keyd
  Add KEYD_CMD_STATS to obtain info about when keyd started, how many
  connects it has seen and how many instances of each command.

--- a/keydctl.8
+++ b/keydctl.8
@@ -32,8 +32,9 @@ otherwise. Outputs nothing to stdout/stderr.
 Request that keyd exits cleanly
 .TP
 .B status
-Display the status of a running keyd. Currently just the protocol version
-in use.
+Display the status of a running keyd. Currently the protocol version in use,
+when keyd was started, the number of client connections seen and a breakdown
+of the commands seen.
 .SH FILES
 .br
 .nf
