Build Debian version number to indicate bzr build

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+onak (0.4.1-1+bzr) unstable; urgency=low
+
+  * Development build
+
+ -- Jonathan McDowell <noodles@earth.li>  Tue, 24 Apr 2012 21:54:17 -0700
+
 onak (0.4.1-1) unstable; urgency=low
 
   * New upstream release
