--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ onak (0.4.1-1+bzr) unstable; urgency=low
   * Development build
   * Switch to source format 3.0 (quilt).
   * Only seed initial database if key file is available. (Closes: #710665)
+  * Bump Debian Standards-Version to 3.9.4.0
+    * Update year in copyright file
 
  -- Jonathan McDowell <noodles@earth.li>  Tue, 24 Apr 2012 21:54:17 -0700
 
