--- a/HISTORY
+++ b/HISTORY
@@ -317,3 +317,7 @@
 * Switch DB4 backend to using key fingerprint as primary index
 * Sanity check signature data lengths
 * Add support for systemd socket activation
+
+0.4.4 - 30th September 2014
+
+* Fix key ID lookups using onak CLI tool on 32 bit platforms
