Change config format to a cleaner .ini style
onak's config file format grew from the pksd config style. pksd is long
obsolete and there are a number of features it would be nice to support
in onak which this config format makes hard to support cleanly. Move to
a .ini style config file, with [section] and name=value definitions. The
old format is still supported and at present an old style config is
searched for first to ensure smooth upgrades, but any new config options
will only be supported by the new style.

Additionally add tests against both old + new config styles for all
backends.

--- a/README
+++ b/README
@@ -54,10 +54,10 @@ Once make has completed you'll end up with various binaries:
 
 Config:
 
-I've finally added config file support. onak.conf is an example config;
-the main thing to change is the db_dir to whereever you want to put your
-database files. The configure script allows you to specific where it
-should live; by default it'll be PREFIX/etc/onak.conf.
+I've finally added config file support. onak.ini is an example config;
+the main thing to change is the location in the backend section to
+whereever you want to put your database files. The configure script allows
+you to specific where it should live; by default it'll be PREFIX/etc/onak.ini.
 
 
 Backends:
