--- a/keydctl.8
+++ b/keydctl.8
@@ -40,7 +40,7 @@ of the commands seen.
 .nf
 .\" set tabstop to longest possible filename, plus a wee bit
 .ta \w'/usr/lib/perl/getopts.pl   'u
-\fI/etc/onak.conf\fR	default configuration file
+\fI/etc/onak.ini\fR	default configuration file
 .SH NOTES
 This man page could probably do with some more details.
 .SH "SEE ALSO"
