--- a/onak.1
+++ b/onak.1
@@ -71,7 +71,7 @@ Export all keys on your gnupg keyring and import them into the keyserver.
 .nf
 .\" set tabstop to longest possible filename, plus a wee bit
 .ta \w'/usr/lib/perl/getopts.pl   'u
-\fI/etc/onak.conf\fR	default configuration file
+\fI/etc/onak.ini\fR	default configuration file
 .SH NOTES
 This man page could probably do with some more details.
 .SH AUTHOR
