--- a/keyd.8
+++ b/keyd.8
@@ -32,7 +32,7 @@ Display help text.
 .nf
 .\" set tabstop to longest possible filename, plus a wee bit
 .ta \w'/usr/lib/perl/getopts.pl   'u
-\fI/etc/onak.conf\fR	default configuration file
+\fI/etc/onak.ini\fR	default configuration file
 .SH NOTES
 This man page could probably do with some more details.
 .SH "SEE ALSO"
