--- a/onak-mail.pl.8
+++ b/onak-mail.pl.8
@@ -15,7 +15,7 @@ aliases file, a .forward or via procmail and takes no options.
 .nf
 .\" set tabstop to longest possible filename, plus a wee bit
 .ta \w'/usr/lib/perl/getopts.pl   'u
-\fI/etc/onak.conf\fR	default configuration file
+\fI/etc/onak.ini\fR	default configuration file
 .SH NOTES
 This man page could probably do with some more details.
 .SH "SEE ALSO"
