Add "dumpconfig" command to onak to aide configuration file migration
onak is capable of parsing both old and new style configuration files,
but future improvements will only be added to the new style. To aide
users in the migration to the new format add a "dumpconfig" option to
the onak binary which will dump the current configuration in new format.

--- a/onak.1
+++ b/onak.1
@@ -39,6 +39,12 @@ Read OpenPGP keys from stdin and add them to the keyserver database.
 Read OpenPGP keys from stdin, run the key cleaning routines against them and
 dump to stdout.
 .TP
+.B dumpconfig
+Dump the running config in new .ini format to stdout, or the provided file.
+Intended to help with migration from old style configuration files - onak can
+read and parse the old style file and this command will output the equivalent
+new style configuration.
+.TP
 .B delete
 Delete a given key from the keyserver.
 .TP
