Update Debian Vcs URLs to use secure variants

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ onak (0.4.6-1+git) UNRELEASED; urgency=low
   * Remove Ross Burton from Uploaders.
   * Bump Debian Standards-Version to 3.9.8.0
   * Fix up systemd control file to allow non-socket activation.
+  * Update Vcs URLs to use secure variants.
 
  -- Jonathan McDowell <noodles@earth.li>  Sun, 17 Jan 2016 14:14:00 +0000
 
