--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+onak (0.5.0+wip-1) UNRELEASED; urgency=low
+
+  * Bump debhelper compat level to 10
+
+ -- Jonathan McDowell <noodles@earth.li>  Thu, 22 Aug 2019 07:18:49 +0100
+
 onak (0.5.0-1) unstable; urgency=low
 
   * Remove Ross Burton from Uploaders.
